edition = "2023";  // successor to proto2 and proto3

package v2;
import "google/protobuf/go_features.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";
option features.(pb.go).api_level = API_OPAQUE;

message ResourceByID {
  string id = 1;
}

message Empty {}

message Schedule {
  enum IntervalType {
    UNSET = 0;
    WEEKLY = 1;
    MONTHLY = 2;
    DAILY = 3;
  }

  // Sunday = 0, Monday = 1, .... Saturday =  6
  message DaysOfWeek {
    repeated int32 days = 1;
  }
  // 1 for 1st, 2 for 2nd .... 31 for 31st
  message DaysOfMonth {
    repeated int32 days = 1;
  }

  IntervalType interval_type = 1;
  int32 hour = 2;
  int32 minute = 3;

  oneof Interval {
    DaysOfWeek days_of_week = 4;
    DaysOfMonth days_of_month = 5;
  }
}
